--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
 
 .vscode/settings.json
 *.csproj
-Library
+*.sln
+Library/
+Assets/PolygonTown
+Assets/PolygonTown.meta
+obj/
+Debug/
+Logs/
+Temp/
