添加点阵透明案例
添加点阵透明案例

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,8 @@ obj/
 Debug/
 Logs/
 Temp/
+.vs/urpreflectdemo/v17/Browse.VC.db
+.vs/urpreflectdemo/v17/Browse.VC.db-shm
+.vs/urpreflectdemo/v17/Browse.VC.db-wal
+.vs/urpreflectdemo/v17/Browse.VC.opendb
+.vsconfig
